feat: получение истории пользователя
